--- a/client/src/components/Nav.css
+++ b/client/src/components/Nav.css
@@ -5,8 +5,9 @@
     align-items: center;
     position: relative;
     padding: 0.5rem 0rem;
-    background-color: #fff;
+    background-color: rgb(193, 196, 195);
     color: black;
     box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
     text-align:center ;
+    justify-content: space-between;
   }
